test/errors/type/str/spread.yasl
/*

 example block comment

*/

mt.lookup('', .spread)(1, true)
