test/errors/type/str/spread.yasl.err
TypeError: str.spread expected arg in position 0 to be of type str, got arg of type int. (line 7)
